# auth-tarball-from-git

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: args.rs  git.rs  lib.rs  main.rs
