[package]
name = "auth-tarball-from-git"
version = "0.2.0"
description = "Authenticate a tarball through a signed tag in a git repository (with reproducible builds)"
authors = ["kpcyrd <git@rxv.cc>"]
license = "GPL-3.0"
repository = "https://github.com/kpcyrd/auth-tarball-from-git"
categories = ["command-line-utilities"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
clap = { version = "3.1.18", features = ["derive"] }
env_logger = "0.9.0"
log = "0.4.17"
tempfile = "3.3.0"
tokio = { version = "1.18.2", features = ["macros", "rt-multi-thread", "process", "fs"] }
